[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "hatch-vcs"]

[project]
name = "mpesakit"
dynamic = ["version"]
description = "A Python SDK for integrating with M-Pesa APIs"
readme = "README.md"
license = { text = "APACHE-2.0" }
requires-python = ">=3.10"
authors = [
  {name = "John Kagunda", email = "johnmkagunda@gmail.com"},
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
  "Typing :: Typed",
]
keywords = [
  "mpesa",
  "sdk",
  "payment",
  "africa",
  "flask",
  "django",
  "fastapi",
  "rest",
  "api",
  "mobile money",
  "payments",
]
maintainers = [
  {name = "John Kagunda", email = "johnmkagunda@gmail.com"},
]

dependencies = [
  "pydantic >=2.10.6,<3.0.0",
  "pydantic[email] >=2.10.6,<3.0.0",
  "requests >=2.32.5,<3.0.0",
  "typing_extensions >= 4.12.2,<5.0.0",
  "cryptography >=41.0.7",
  "tenacity>=9.1.2,<10.0.0",
  "httpx >=0.27.0,<1.0.0",
]

[project.urls]
Homepage = "https://github.com/Byte-Barn/mpesakit"
Issues = "https://github.com/Byte-Barn/mpesakit/issues"
Repository = "https://github.com/Byte-Barn/mpesakit"

[project.optional-dependencies]
dev = [
  "build",
  "coverage",
  "hatch",
  "hatch-vcs",
  "hatchling",
  "mypy",
  "bandit",
  "pytest",
  "pytest-cov",
  "ruff",
  "types-requests",
  "pytest-asyncio >=0.23.6,<1.0.0",
]
test = [
  "bandit",
  "mypy",
  "pyngrok",
  "pytest",
  "pytest-cov",
  "types-requests",
  "pytest-asyncio >=0.23.6,<1.0.0",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build]
include = [
  "mpesakit/**/*",
  "pyproject.toml",
]

[tool.hatch.build.targets.wheel]
packages = ["mpesakit"]

# Ruff configuration-sdk/is
[tool.ruff]
target-version = "py310"
fix = true  

[tool.ruff.lint]
ignore = [
  "D104", # Missing docstring in public package
  "D105", # Missing docstring in magic method
  "E501", # Line too long
]
select = [
  "D", # pydocstyle
  "E", # pycodestyle errors
  "W", # pycodestyle warnings
  "F", # pyflakes
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["mpesakit"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["D104", "F401"] # Ignore missing docstring and unused imports in __init__.py files

# Testing configuration
[tool.pytest.ini_options]
addopts = "-v -s --cov=mpesakit --cov-report=html --cov-report=term"
markers = [
  "live: mark a test as requiring live credentials and environment",
  "asyncio",
]
testpaths = ["tests"]

[tool.mypy]
plugins = ["pydantic.mypy"]
warn_unused_ignores = true
